--- a/NetLook.vcxproj
+++ b/NetLook.vcxproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="admin.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="movie.cpp" />
     <ClCompile Include="series.cpp" />
     <ClCompile Include="show.cpp" />
