--- a/NetLook.vcxproj.filters
+++ b/NetLook.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClCompile Include="admin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
