--- a/NetLook.vcxproj
+++ b/NetLook.vcxproj
@@ -129,7 +129,9 @@
   <ItemGroup>
     <ClInclude Include="admin.h" />
     <ClInclude Include="movie.h" />
+    <ClInclude Include="moviesDB.h" />
     <ClInclude Include="series.h" />
+    <ClInclude Include="seriesDB.h" />
     <ClInclude Include="show.h" />
     <ClInclude Include="user.h" />
     <ClInclude Include="viewer.h" />
@@ -138,7 +140,9 @@
     <ClCompile Include="admin.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="movie.cpp" />
+    <ClCompile Include="moviesDB.cpp" />
     <ClCompile Include="series.cpp" />
+    <ClCompile Include="seriesDB.cpp" />
     <ClCompile Include="show.cpp" />
     <ClCompile Include="user.cpp" />
     <ClCompile Include="viewer.cpp" />
