--- a/NetLook.vcxproj.filters
+++ b/NetLook.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClCompile Include="seriesDB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="validationFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
