--- a/NetLook.vcxproj
+++ b/NetLook.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="seriesDB.cpp" />
     <ClCompile Include="show.cpp" />
     <ClCompile Include="user.cpp" />
+    <ClCompile Include="validationFile.cpp" />
     <ClCompile Include="viewer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
