--- a/NetLook.vcxproj
+++ b/NetLook.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="admin.h" />
+    <ClInclude Include="menus.h" />
     <ClInclude Include="movie.h" />
     <ClInclude Include="moviesDB.h" />
     <ClInclude Include="series.h" />
@@ -139,11 +140,13 @@
   <ItemGroup>
     <ClCompile Include="admin.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="menus.cpp" />
     <ClCompile Include="movie.cpp" />
     <ClCompile Include="moviesDB.cpp" />
     <ClCompile Include="series.cpp" />
     <ClCompile Include="seriesDB.cpp" />
     <ClCompile Include="show.cpp" />
+    <ClCompile Include="test_movie.cpp" />
     <ClCompile Include="user.cpp" />
     <ClCompile Include="validationFile.cpp" />
     <ClCompile Include="validationFile.h" />
