--- a/NetLook.vcxproj.filters
+++ b/NetLook.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="seriesDB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="menus.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="series.cpp">
@@ -69,6 +72,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="validationFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="test_movie.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="validationFile.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="menus.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
