--- a/NetLook.vcxproj.filters
+++ b/NetLook.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="menus.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="outputs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="series.cpp">
@@ -74,13 +77,13 @@
     <ClCompile Include="validationFile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="test_movie.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="validationFile.h">
       <Filter>Header Files</Filter>
     </ClCompile>
     <ClCompile Include="menus.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="outputs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
