--- a/NetLook.vcxproj.filters
+++ b/NetLook.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="outputs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="strings.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="series.cpp">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="outputs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="strings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
